[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redisvl-haystack"
dynamic = ["version"]
description = 'An implementation of the Haystack DocumentStore protocol for interfacing with RedisVL.'
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "deepset GmbH", email = "info@deepset.ai" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/deepset GmbH/redisvl-haystack#readme"
Issues = "https://github.com/deepset GmbH/redisvl-haystack/issues"
Source = "https://github.com/deepset GmbH/redisvl-haystack"

[tool.hatch.version]
path = "src/redisvl_haystack/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/redisvl_haystack tests}"

[tool.coverage.run]
source_pkgs = ["redisvl_haystack", "tests"]
branch = true
parallel = true
omit = [
  "src/redisvl_haystack/__about__.py",
]

[tool.coverage.paths]
redisvl_haystack = ["src/redisvl_haystack", "*/redisvl-haystack/src/redisvl_haystack"]
tests = ["tests", "*/redisvl-haystack/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
